fix: formatting in PNG export layout on mobile and export dropdown menu

--- a/frontend/src/components/Worksheet/react-big-calendar-override.css
+++ b/frontend/src/components/Worksheet/react-big-calendar-override.css
@@ -73,6 +73,10 @@
   display: none !important;
 }
 
+.exporting-png [data-calendar-export-omit] {
+  display: none !important;
+}
+
 .rbc-header a:hover {
   color: black !important;
   text-decoration: none !important;
